--- a/BowlingCoreMVC/Views/Locations/Details.cshtml
+++ b/BowlingCoreMVC/Views/Locations/Details.cshtml
@@ -17,10 +17,10 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CreatedByID)
+            @Html.DisplayNameFor(model => model.CreatedByUserName)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.CreatedByID)
+            @Html.DisplayFor(model => model.CreatedByUserName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.CreatedDate)
