--- a/BowlingCoreMVC/Views/Leagues/Create.cshtml
+++ b/BowlingCoreMVC/Views/Leagues/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BowlingCoreMVC.Models.GameViewModels.GameViewModels.LeagueViewModel
+﻿@model BowlingCoreMVC.Models.League
 
 @{
     ViewData["Title"] = "Create";
@@ -13,9 +13,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="LeagueName" class="control-label"></label>
-                <input asp-for="LeagueName" class="form-control" />
-                <span asp-validation-for="LeagueName" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
 
             <div class="form-group">
