--- a/BowlingCoreMVC/Views/Leagues/Edit.cshtml
+++ b/BowlingCoreMVC/Views/Leagues/Edit.cshtml
@@ -11,12 +11,23 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
+            <input asp-for="CreatedByID" class="hidden" />
+            <input asp-for="CreatedDate" class="hidden" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="LocationID" class="control-label"></label>
+                <select asp-for="LocationID" asp-items="@Model.Locations" class="form-control">
+                    <option>---Location---</option>
+                </select>
+                <span asp-validation-for="LocationID" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
                 <input asp-for="StartDate" class="form-control" />
