--- a/BowlingCoreMVC/Views/Locations/Index.cshtml
+++ b/BowlingCoreMVC/Views/Locations/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<BowlingCoreMVC.Models.Location>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Locations";
 }
 
-<h2>Index</h2>
+<h2>@ViewData["Title"]</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -16,7 +16,7 @@
                     @Html.DisplayNameFor(model => model.Name)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.CreatedByID)
+                    @Html.DisplayNameFor(model => model.CreatedByUserName)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.CreatedDate)
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CreatedByID)
+                @Html.DisplayFor(modelItem => item.CreatedByUserName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CreatedDate)
