--- a/BowlingCoreMVC/Views/Series/Create.cshtml
+++ b/BowlingCoreMVC/Views/Series/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BowlingCoreMVC.Models.GameViewModels.GameViewModels.SeriesViewModel
+﻿@model BowlingCoreMVC.Models.Series
 
 @{
     ViewData["Title"] = "Create";
