--- a/BowlingCoreMVC/Views/Leagues/Index.cshtml
+++ b/BowlingCoreMVC/Views/Leagues/Index.cshtml
@@ -57,7 +57,7 @@
                         {
                             <div class="btn-group">
                                 <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-primary">Edit</a>
-                                <a asp-action="Details" asp-route-id="@item.ID" class="btn btn-default">Details</a>
+                                <a asp-action="Details" asp-route-id="@item.ID" class="btn btn-info">Details</a>
                                 <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger">Delete</a>
                             </div>
                         }
