--- a/BowlingCoreMVC/Views/Series/Index.cshtml
+++ b/BowlingCoreMVC/Views/Series/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<BowlingCoreMVC.Models.Series>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "My Series";
 }
 
-<h2>Index</h2>
+<h2>@ViewData["Title"]</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">New Series</a>
 </p>
 <table class="table">
     <thead>
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.SeriesScore)
             </th>
             <th>
-                Games
+                @Html.DisplayNameFor(model => model.Games)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.LeagueName)
@@ -61,9 +61,11 @@
                     @Html.DisplayFor(modelItem => item.CreatedDate)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                    <div class="btn-group">
+                        <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-primary">Edit</a>
+                        <a asp-action="Details" asp-route-id="@item.ID" class="btn btn-info">Details</a>
+                        <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger">Delete</a>
+                    </div>
                 </td>
             </tr>
         }
