--- a/BowlingCoreMVC/Views/Shared/_Layout.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_Layout.cshtml
@@ -30,13 +30,25 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    @*<li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>*@
+                    <li><a asp-area="" asp-controller="Stats" asp-action="Index">HiScores</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     @*<li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>*@
-                    <li><a asp-area="" asp-controller="Game" asp-action="Index">My Games</a></li>
-                    <li><a asp-area="" asp-controller="Series" asp-action="Index">My Series</a></li>
-                    <li><a asp-area="" asp-controller="Leagues" asp-action="Index">Leagues</a></li>
-                    <li><a asp-area="" asp-controller="Locations" asp-action="Index">Locations</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Scores<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a asp-area="" asp-controller="Game" asp-action="Index">My Games</a></li>
+                            <li><a asp-area="" asp-controller="Series" asp-action="Index">My Series</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Leagues<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a asp-area="" asp-controller="Leagues" asp-action="Index">Leagues</a></li>
+                            <li><a asp-area="" asp-controller="Locations" asp-action="Index">Locations</a></li>
+                        </ul>
+                    </li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
