--- a/BowlingCoreMVC/Views/Locations/Index.cshtml
+++ b/BowlingCoreMVC/Views/Locations/Index.cshtml
@@ -44,9 +44,14 @@
             </td>
             <td>
                 <div class="btn-group">
-                    <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-primary">Edit</a>
-                    <a asp-action="Details" asp-route-id="@item.ID" class="btn btn-info">Details</a>
-                    <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger">Delete</a>
+                    @{
+                        if (ViewData["CurrentUserID"].ToString() == item.CreatedByID)
+                        {
+                            <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-primary">Edit</a>
+                            <a asp-action="Details" asp-route-id="@item.ID" class="btn btn-info">Details</a>
+                            <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger">Delete</a>
+                        }
+                    }
                 </div>
             </td>
         </tr>
