Added statistics, series authorization

--- a/BowlingCoreMVC/Views/Shared/_Layout.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
                         <ul class="dropdown-menu">
                             <li><a asp-area="" asp-controller="Game" asp-action="Index">My Games</a></li>
                             <li><a asp-area="" asp-controller="Series" asp-action="Index">My Series</a></li>
+                            <li><a asp-area="" asp-controller="Stats" asp-action="MyStats">My Statistics</a></li>
                         </ul>
                     </li>
 
