--- a/BowlingCoreMVC/Views/Game/Delete.cshtml
+++ b/BowlingCoreMVC/Views/Game/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BowlingCoreMVC.Models.Location
+﻿@model BowlingCoreMVC.Models.Game
 
 @{
     ViewData["Title"] = "Delete";
@@ -6,22 +6,16 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this? You cannot reverse this action</h3>
 <div>
-    <h4>Location</h4>
+    <h4>Game</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Score)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedByUserName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CreatedByUserName)
+            @Html.DisplayFor(model => model.Score)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.CreatedDate)
