--- a/BowlingCoreMVC/Views/Series/Delete.cshtml
+++ b/BowlingCoreMVC/Views/Series/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BowlingCoreMVC.Models.Location
+﻿@model BowlingCoreMVC.Models.Series
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,20 +8,21 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Location</h4>
+    <h4>Series</h4>
     <hr />
     <dl class="dl-horizontal">
+        
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.LeagueID)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.LeagueID)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CreatedByUserName)
+            @Html.DisplayNameFor(model => model.SeriesScore)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.CreatedByUserName)
+            @Html.DisplayFor(model => model.SeriesScore)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.CreatedDate)
@@ -39,7 +40,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
