--- a/BowlingCoreMVC/Views/Series/Index.cshtml
+++ b/BowlingCoreMVC/Views/Series/Index.cshtml
@@ -61,9 +61,9 @@
                     @Html.DisplayFor(modelItem => item.CreatedDate)
                 </td>
                 <td>
-                    <div class="btn-group">
+                    <div>
                         <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-primary">Edit</a>
-                        <a asp-action="Details" asp-route-id="@item.ID" class="btn btn-info">Details</a>
+                        @*<a asp-action="Details" asp-route-id="@item.ID" class="btn btn-info">Details</a>*@
                         <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger">Delete</a>
                     </div>
                 </td>
