Fixed series delete and touched up the delete pages

--- a/BowlingCoreMVC/Views/Game/Delete.cshtml
+++ b/BowlingCoreMVC/Views/Game/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model BowlingCoreMVC.Models.Game
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Game";
 }
 
-<h2>Delete</h2>
+<h2>@ViewData["Title"]</h2>
 
-<h3>Are you sure you want to delete this? You cannot reverse this action</h3>
+<h3 class="text-danger">Are you sure you want to delete this? You CANNOT revert this action.</h3>
 <div>
     <h4>Game</h4>
     <hr />
