--- a/BowlingCoreMVC/Views/Leagues/Delete.cshtml
+++ b/BowlingCoreMVC/Views/Leagues/Delete.cshtml
@@ -1,10 +1,10 @@
 ﻿@model BowlingCoreMVC.Models.League
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete League";
 }
 
-<h2>Delete</h2>
+<h2>@ViewData["Title"]</h2>
 
 <h3 class="text-danger">Are you sure you want to delete this? You CANNOT revert this action.</h3>
 <h4>Any Series created under this League will be dissassociated with this and be marked as No League.</h4>
