--- a/BowlingCoreMVC/Views/Locations/Delete.cshtml
+++ b/BowlingCoreMVC/Views/Locations/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model BowlingCoreMVC.Models.Location
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Location";
 }
 
-<h2>Delete</h2>
+<h2>@ViewData["Title"]</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="text-danger">Are you sure you want to delete this? You CANNOT revert this action.</h3>
 <div>
     <h4>Location</h4>
     <hr />
