--- a/BowlingCoreMVC/Views/Series/Delete.cshtml
+++ b/BowlingCoreMVC/Views/Series/Delete.cshtml
@@ -1,23 +1,28 @@
 ﻿@model BowlingCoreMVC.Models.Series
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Series";
 }
 
-<h2>Delete</h2>
+<h2>@ViewData["Title"]</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="text-danger">Are you sure you want to delete this? You CANNOT revert this action.</h3>
+<h3>This will delete the Games in the Series as well</h3>
 <div>
     <h4>Series</h4>
     <hr />
     <dl class="dl-horizontal">
-        
-        <dt>
-            @Html.DisplayNameFor(model => model.LeagueID)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.LeagueID)
-        </dd>
+
+        @if (Model.LeagueName != "" || Model.LeagueName != null)
+        {
+            <dt>
+                @Html.DisplayNameFor(model => model.LeagueName)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.LeagueName)
+            </dd>
+        }
+
         <dt>
             @Html.DisplayNameFor(model => model.SeriesScore)
         </dt>
@@ -36,11 +41,20 @@
         <dd>
             @Html.DisplayFor(model => model.ModifiedDate)
         </dd>
+        <dt>
+            Games Scores
+        </dt>
+        <dd>
+            @foreach (var g in Model.Games)
+            {
+                @g.Score <label>,</label>
+            }
+        </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
