production environment test

--- a/BowlingCoreMVC/Views/Home/Index.cshtml
+++ b/BowlingCoreMVC/Views/Home/Index.cshtml
@@ -7,6 +7,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4"></div>
+            <h3>Environment test:</h3>
+            <h3>@ViewData["EnvironmentTest"]</h3>
             <div class="col-lg-4"></div>
             <div class="col-lg-4"></div>
         </div>
