fixed series create (game now setting userid), 10th frame scoring glitch, home page text, appname update

--- a/BowlingCoreMVC/Views/Stats/Index.cshtml
+++ b/BowlingCoreMVC/Views/Stats/Index.cshtml
@@ -39,7 +39,7 @@
 
 
             <div class="col-lg-4">
-                <h4>High Score Games</h4>
+                <h4>High Games</h4>
                 <table class="table table-condensed table-striped">
                     <tr>
                         <th>
@@ -67,7 +67,7 @@
 
 
             <div class="col-lg-4">
-                <h4>High Score Series</h4>
+                <h4>High Series</h4>
                 <table class="table table-condensed table-striped">
                     <tr>
                         <th>
