--- a/BowlingCoreMVC/Views/Home/About.cshtml
+++ b/BowlingCoreMVC/Views/Home/About.cshtml
@@ -4,7 +4,7 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<h4>Here at [site name here] you can track all of your bowling scores! Whether you are in multiple leagues, or you just want to track your practice, you can do it all here.</h4>
+<h4>Here at BowlingHub you can track all of your bowling scores! Whether you are in multiple leagues, or you just want to track your practice, you can do it all here.</h4>
 
 <br />
 <br />
