--- a/BowlingCoreMVC/Views/Shared/_Layout.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_Layout.cshtml
@@ -1,9 +1,13 @@
-﻿<!DOCTYPE html>
+﻿@{
+    ViewData["AppName"] = "BowlingHub";
+}
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - BowlingCoreMVC</title>
+    <title>@ViewData["Title"] - @ViewData["AppName"]</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,7 +30,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">BowlingCoreMVC</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">@ViewData["AppName"]</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -59,7 +63,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - BowlingCoreMVC</p>
+            <p>&copy; 2018 - @ViewData["AppName"]</p>
         </footer>
     </div>
 
