--- a/BowlingCoreMVC/Views/Locations/Index.cshtml
+++ b/BowlingCoreMVC/Views/Locations/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>@ViewData["Title"]</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">New Location</a>
 </p>
 <table class="table">
     <thead>
