removed createdbyid from league details

--- a/BowlingCoreMVC/Views/Leagues/Details.cshtml
+++ b/BowlingCoreMVC/Views/Leagues/Details.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Details</h2>
-
+@* TODO: Create a local LEague sheet here with weekly scores, league high scores, etc.*@
 <div>
     <h4>League</h4>
     <hr />
@@ -15,12 +15,6 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedByID)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CreatedByID)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.StartDate)
