--- a/BowlingCoreMVC/Views/Leagues/Create.cshtml
+++ b/BowlingCoreMVC/Views/Leagues/Create.cshtml
@@ -20,12 +20,23 @@
 
             <div class="form-group">
                 <label asp-for="LocationID" class="control-label"></label>
-                <select asp-for="LocationID" asp-items="@Model.Locations" class="form-control">
-                    <option>---Location---</option>
+                <select asp-for="LocationID" asp-items="@Model.Locations" class="form-control" id="ddlLocations">
+                    <option value="0">---Location---</option>
                 </select>
                 <span asp-validation-for="LocationID" class="text-danger"></span>
             </div>
 
+            <div class="form-group">
+                <label asp-for="NewLocation" class="control-label"></label>
+                <input asp-for="NewLocation" class="" id="chkNewLocation" onchange="NewLocationCheckboxChanged(this);" />
+                
+            </div>
+
+            <div class="form-group" id="grpNewLocation">
+                <label asp-for="NewLocationName" class="control-label"></label>
+                <input asp-for="NewLocationName" class="form-control" id="txtLocationName" />
+                <span asp-validation-for="NewLocationName" class="text-danger"></span>
+            </div>
 
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
@@ -48,3 +59,54 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+
+@*<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
+        asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+        asp-fallback-test="window.jQuery"
+        crossorigin="anonymous"
+        integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
+</script>
+<script type="text/javascript">
+    $(document).ready(function ()
+    {
+        $('#grpNewLocation').hide();
+
+        $('#chkNewLocation').change(function ()
+        {
+            if (this.checked)
+            {
+                $('#grpNewLocation').show();
+                $('#ddlLocations').val("---Location---");
+                $('#ddlLocations').prop("disbled", true);
+            }
+            else
+            {
+                $('#grpNewLocation').hide();
+                $('#ddlLocations').prop("disbled", false);
+            }
+        });
+</script>*@
+
+<script>
+    window.onload = function ()
+    {
+        NewLocationCheckboxChanged(document.querySelector("#chkNewLocation"));
+    }
+    
+    function NewLocationCheckboxChanged(e)
+    {
+        if (e.checked)
+        {
+            document.querySelector("#ddlLocations").value = 0;
+            document.querySelector("#ddlLocations").setAttribute("disabled", "");
+            document.querySelector("#txtLocationName").removeAttribute("disabled");
+            document.querySelector("#grpNewLocation").style.display = 'block';
+        }
+        else
+        {
+            document.querySelector("#ddlLocations").removeAttribute("disabled");
+            document.querySelector("#txtLocationName").setAttribute("disabled", "");
+            document.querySelector("#grpNewLocation").style.display = 'none';
+        }
+    }
+</script>
