Usersummary small bug fix, added save all to series, small scoring10th frame bug fix

--- a/BowlingCoreMVC/Views/Series/Edit.cshtml
+++ b/BowlingCoreMVC/Views/Series/Edit.cshtml
@@ -10,8 +10,11 @@
 <h2>Edit</h2>
 
 
-
-
+<div class="row">
+    <div class="col-lg-6">
+        <input type="button" class="btn btn-success btn-block" value="Save All" onclick="SaveAllClick()" />
+    </div>
+</div>
 
 @foreach (var g in Model.Games)
 {
