--- a/BowlingCoreMVC/Views/Series/Edit.cshtml
+++ b/BowlingCoreMVC/Views/Series/Edit.cshtml
@@ -22,3 +22,10 @@
 
 }
 
+<environment include="Development">
+    <script src="~/js/editgame.js" asp-append-version="true"></script>
+</environment>
+
+<environment exclude="Development">
+    <script src="~/js/editgame.min.js" asp-append-version="true"></script>
+</environment>
