some frontend cleanup on editing games

--- a/BowlingCoreMVC/Views/Game/Edit.cshtml
+++ b/BowlingCoreMVC/Views/Game/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<div class="page-header"><h3>Editing Game from @Model.CreatedDate.ToShortDateString() <small>last modified on @Model.ModifiedDate.ToShortDateString()</small></h3></div>
 
 
 
