--- a/BowlingCoreMVC/Views/Series/Edit.cshtml
+++ b/BowlingCoreMVC/Views/Series/Edit.cshtml
@@ -7,12 +7,13 @@
 @{
     var m = Model;
 }
-<h2>Edit</h2>
+<div class="page-header"><h3>Editing Series from @Model.CreatedDate.ToShortDateString() <small>last modified on @Model.ModifiedDate.ToShortDateString()</small></h3></div>
 
 
 <div class="row">
     <div class="col-lg-6">
         <input type="button" class="btn btn-success btn-block" value="Save All" onclick="SaveAllClick()" />
+        <br />
     </div>
 </div>
 
