--- a/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
+++ b/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
@@ -6,6 +6,9 @@
 @Html.HiddenFor(mod => mod.CurrentThrow, new { @id = Model.ID + "_CurrentThrow" })
 @Html.HiddenFor(mod => mod.ScoreUpToFrame, new { @id = Model.ID + "_ScoreUpToFrame" })
 
+@{
+    string CollapseGameID = "CollapseGame_" + Model.ID;
+}
 
 <input type="hidden" class="hidGameID" value="@Model.ID" />
 
@@ -16,104 +19,134 @@
     Game Saved!
 </div>
 
-<table class="table table-bordered table-condensed GameTable">
-    <thead>
-        <tr>
-            @*OR just 1-10..*@
-            @foreach (var f in Model.Frames)
-            {
-                if (f.FrameNum != 10)
-                {
-                    <th colspan="2">@f.FrameNum</th>
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+    <div class="panel panel-primary">
+        @*<a role="button" data-toggle="collapse" data-parent="#accordion" href="#@CollapseGameID" aria-expanded="true" aria-controls="@CollapseGameID">*@
+        <div class="panel-heading" role="button" id="GameHeading" data-toggle="collapse" data-parent="#accordion" href="#@CollapseGameID" aria-expanded="true" aria-controls="@CollapseGameID">
+            <h4 class="panel-title">
+                @{
+                    if (Model.SeriesID != 0 && Model.SeriesID != null)
+                    {
+                        @Model.UserName @:Game @Model.SeriesIndex
+                    }
+                    else
+                    {
+                        @Model.UserName
+                    }
                 }
-                else
-                {
-                    <th colspan="3">@f.FrameNum</th>
-                }
+                
+            </h4>
+        </div>
+        @*</a>*@
+        <div id="scoreboard" class="panel-body">
+            <table class="table table-bordered table-condensed GameTable">
+                <thead>
+                    <tr>
+                        @*OR just 1-10..*@
+                        @foreach (var f in Model.Frames)
+                        {
+                            if (f.FrameNum != 10)
+                            {
+                                <th colspan="2">@f.FrameNum</th>
+                            }
+                            else
+                            {
+                                <th colspan="3">@f.FrameNum</th>
+                            }
 
 
-            }
-        </tr>
-    </thead>
-    <tr>
-        @foreach (var f in Model.Frames)
-        {
+                        }
+                    </tr>
+                </thead>
+                <tr>
+                    @foreach (var f in Model.Frames)
+                    {
 
-            <frame-throw frame="@f" throw-num="1"></frame-throw>
-            <frame-throw frame="@f" throw-num="2"></frame-throw>
+                        <frame-throw frame="@f" throw-num="1"></frame-throw>
+                        <frame-throw frame="@f" throw-num="2"></frame-throw>
 
-            if (f.FrameNum == 10)
-            {
-                <frame-throw frame="@f" throw-num="3"></frame-throw>
-            }
+                        if (f.FrameNum == 10)
+                        {
+                            <frame-throw frame="@f" throw-num="3"></frame-throw>
+                        }
 
-        }
-    </tr>
-    <tr>
-        @foreach (var f in Model.Frames)
-        {
-            <frame-score frame="@f"></frame-score>
+                    }
+                </tr>
+                <tr>
+                    @foreach (var f in Model.Frames)
+                    {
+                        <frame-score frame="@f"></frame-score>
 
-        }
-    </tr>
-</table>
+                    }
+                </tr>
+            </table>
 
-<div class="row">
-    <div class="col-sm-4">
-        <button class="btn btn-default btn-sm" onclick="PreviousClickSendGame(@Model.ID)"><span class="glyphicon glyphicon-arrow-left" /></button>
-        <button class="btn btn-default btn-sm" onclick="NextClickSendGame(@Model.ID)"><span class="glyphicon glyphicon-arrow-right" /></button>
-        <br />
-        <br />
-        <input type="button" class="btn btn-success btn-block" value="Save" onclick="SaveGameClick(@Model.ID)" />
+        </div>
+        <div id="@CollapseGameID" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="GameHeading">
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-sm-2">
+                        <button class="btn btn-default btn-lg" onclick="PreviousClickSendGame(@Model.ID)"><span class="glyphicon glyphicon-arrow-left" /></button>
+
+                    </div>
+
+                    <div class="col-sm-2">
+                        <button class="btn btn-default btn-lg" onclick="NextClickSendGame(@Model.ID)"><span class="glyphicon glyphicon-arrow-right" /></button>
+                    </div>
+                    <div class="col-sm-4">
+                        <table class="table table-condensed" id="PinsTable">
+                            <tr>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_7" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_7"></label></div></td>
+                                <td></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_8" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_8"></label></div></td>
+                                <td></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_9" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_9"></label></div></td>
+                                <td></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_10" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_10"></label></div></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_4" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_4"></label></div></td>
+                                <td></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_5" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_5"></label></div></td>
+                                <td></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_6" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_6"></label></div></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_2" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_2"></label></div></td>
+                                <td></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_3" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_3"></label></div></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_1" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_1"></label></div></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="col-sm-1">
+
+                    </div>
+                    <div class="col-sm-2"></div>
+                </div>
+            </div>
+        </div>
+        <div class="panel-footer">
+            <input type="button" class="btn btn-success btn-block" value="Save" onclick="SaveGameClick(@Model.ID)" />
+        </div>
     </div>
-    @*<div class="col-sm-2">
-        
-    </div>*@
-    <div class="col-sm-4">
-        <table class="table table-condensed" id="PinsTable">
-            <tr>
-                <td><div><input type="checkbox" id="@Model.ID-Missed_7" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_7"></label></div></td>
-                <td></td>
-                <td><div><input type="checkbox" id="@Model.ID-Missed_8" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_8"></label></div></td>
-                <td></td>
-                <td><div><input type="checkbox" id="@Model.ID-Missed_9" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_9"></label></div></td>
-                <td></td>
-                <td><div><input type="checkbox" id="@Model.ID-Missed_10" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_10"></label></div></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td><div><input type="checkbox" id="@Model.ID-Missed_4" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_4"></label></div></td>
-                <td></td>
-                <td><div><input type="checkbox" id="@Model.ID-Missed_5" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_5"></label></div></td>
-                <td></td>
-                <td><div><input type="checkbox" id="@Model.ID-Missed_6" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_6"></label></div></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td><div><input type="checkbox" id="@Model.ID-Missed_2" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_2"></label></div></td>
-                <td></td>
-                <td><div><input type="checkbox" id="@Model.ID-Missed_3" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_3"></label></div></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td><div><input type="checkbox" id="@Model.ID-Missed_1" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_1"></label></div></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </table>
-    </div>
-    <div class="col-sm-1">
-        
-    </div>
-    <div class="col-sm-2"></div>
 </div>
+
+
 
 <style type="text/css">
 </style>
