--- a/BowlingCoreMVC/wwwroot/css/site.css
+++ b/BowlingCoreMVC/wwwroot/css/site.css
@@ -58,11 +58,16 @@
 #PinsTable td {
     text-align: center;
     vertical-align: middle;
+    width: 40px;
+    height: 60px;
+    min-height: 60px;
 }
 
 #PinsTable {
+    table-layout: fixed;
     width: 100%;
     max-width: 200px;
+    min-width: 200px;
 }
 
 input[type='checkbox'].pins-checkbox + label:before,
