--- a/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
+++ b/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
@@ -27,7 +27,7 @@
                 @{
                     if (Model.SeriesID != 0 && Model.SeriesID != null)
                     {
-                        @Model.UserName @:Game @Model.SeriesIndex
+                        @Model.UserName @: - Game @Model.SeriesIndex of Series
                     }
                     else
                     {
