Moved scoring to client side; Fixed several scoring bugs; Prettied up the game buttons and fixed the panel overlap;

--- a/BowlingCoreMVC/Views/Shared/_Layout.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - @ViewData["AppName"]</p>
+            <p>&copy; 2018 - @ViewData["AppName"] by Eric DeSmet</p>
         </footer>
     </div>
 
