--- a/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
+++ b/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
@@ -19,7 +19,7 @@
     Game Saved!
 </div>
 
-<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" style="min-width:480px;">
     <div class="panel panel-primary">
         @*<a role="button" data-toggle="collapse" data-parent="#accordion" href="#@CollapseGameID" aria-expanded="true" aria-controls="@CollapseGameID">*@
         <div class="panel-heading" role="button" id="GameHeading" data-toggle="collapse" data-parent="#accordion" href="#@CollapseGameID" aria-expanded="true" aria-controls="@CollapseGameID">
@@ -85,58 +85,69 @@
         <div id="@CollapseGameID" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="GameHeading">
             <div class="panel-body">
                 <div class="row">
-                    <div class="col-sm-2">
+                    <div class="col-xs-2">
                         <button class="btn btn-default btn-lg" onclick="PreviousClickSendGame(@Model.ID)"><span class="glyphicon glyphicon-arrow-left" /></button>
-
                     </div>
-
-                    <div class="col-sm-2">
+                    <div class="col-xs-2">
+                        <button class="btn btn-default btn-lg" onclick="MissedAllClick(@Model.ID)"><span class="glyphicon glyphicon-adjust" /></button>
+                    </div>
+                    <div class="col-xs-2">
                         <button class="btn btn-default btn-lg" onclick="NextClickSendGame(@Model.ID)"><span class="glyphicon glyphicon-arrow-right" /></button>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-xs-2"></div>
+                    <div class="col-xs-2">
+                    </div>
+                    <div class="col-xs-2"></div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-2"></div>
+                    <div class="col-sm-2"></div>
+                    <div class="col-xs-4">
                         <table class="table table-condensed" id="PinsTable">
                             <tr>
-                                <td><div><input type="checkbox" id="@Model.ID-Missed_7" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_7"></label></div></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_7" class="pins-checkbox pins-checkbox-7 sr-only" /><label for="@Model.ID-Missed_7"></label></div></td>
                                 <td></td>
-                                <td><div><input type="checkbox" id="@Model.ID-Missed_8" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_8"></label></div></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_8" class="pins-checkbox pins-checkbox-8 sr-only" /><label for="@Model.ID-Missed_8"></label></div></td>
                                 <td></td>
-                                <td><div><input type="checkbox" id="@Model.ID-Missed_9" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_9"></label></div></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_9" class="pins-checkbox pins-checkbox-9 sr-only" /><label for="@Model.ID-Missed_9"></label></div></td>
                                 <td></td>
-                                <td><div><input type="checkbox" id="@Model.ID-Missed_10" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_10"></label></div></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_10" class="pins-checkbox pins-checkbox-10 sr-only" /><label for="@Model.ID-Missed_10"></label></div></td>
                             </tr>
                             <tr>
                                 <td></td>
-                                <td><div><input type="checkbox" id="@Model.ID-Missed_4" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_4"></label></div></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_4" class="pins-checkbox pins-checkbox-4 sr-only" /><label for="@Model.ID-Missed_4"></label></div></td>
                                 <td></td>
-                                <td><div><input type="checkbox" id="@Model.ID-Missed_5" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_5"></label></div></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_5" class="pins-checkbox pins-checkbox-7 sr-only" /><label for="@Model.ID-Missed_5"></label></div></td>
                                 <td></td>
-                                <td><div><input type="checkbox" id="@Model.ID-Missed_6" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_6"></label></div></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td><div><input type="checkbox" id="@Model.ID-Missed_2" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_2"></label></div></td>
-                                <td></td>
-                                <td><div><input type="checkbox" id="@Model.ID-Missed_3" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_3"></label></div></td>
-                                <td></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_6" class="pins-checkbox pins-checkbox-6 sr-only" /><label for="@Model.ID-Missed_6"></label></div></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td></td>
                                 <td></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_2" class="pins-checkbox pins-checkbox-2 sr-only" /><label for="@Model.ID-Missed_2"></label></div></td>
                                 <td></td>
-                                <td><div><input type="checkbox" id="@Model.ID-Missed_1" class="pins-checkbox sr-only" /><label for="@Model.ID-Missed_1"></label></div></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_3" class="pins-checkbox pins-checkbox-3 sr-only" /><label for="@Model.ID-Missed_3"></label></div></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td><div><input type="checkbox" id="@Model.ID-Missed_1" class="pins-checkbox pins-checkbox-1 sr-only" /><label for="@Model.ID-Missed_1"></label></div></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
                             </tr>
                         </table>
                     </div>
-                    <div class="col-sm-1">
-
+                    <div class="col-xs-2">
+                        @*<button class="btn btn-default btn-lg" onclick="MissedAllClick(@Model.ID)"><span class="glyphicon glyphicon-adjust" /></button>*@
                     </div>
-                    <div class="col-sm-2"></div>
+                    <div class="col-xs-2">
+                        @*<button class="btn btn-default btn-lg" onclick="MissedNoneClick(@Model.ID)"><span class="glyphicon glyphicon-king" /></button>*@
+                    </div>
                 </div>
             </div>
         </div>
