optional game attribute to pass in the scoreuptogame

--- a/BowlingCoreMVC/Views/Shared/Components/GameDetails/Default.cshtml
+++ b/BowlingCoreMVC/Views/Shared/Components/GameDetails/Default.cshtml
@@ -43,7 +43,7 @@
             <tr>
                 @foreach (var f in Model.Frames)
                 {
-                    <frame-score frame="@f"></frame-score>
+                    <frame-score frame="@f" game="@Model"></frame-score>
 
                 }
             </tr>
