editgame wasn't minified, this should fix the missedallclick function

--- a/BowlingCoreMVC/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/BowlingCoreMVC/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -4,5 +4,5 @@
 
 <h2>@ViewData["Title"]</h2>
 <p>
-    Please check your email to reset your password.
+    An email has been sent with instructions to reset your password. If you do not recieve an email within 10 minutes, please try again.
 </p>
