trying unminified editgame .js for production to test

--- a/BowlingCoreMVC/Views/Series/Edit.cshtml
+++ b/BowlingCoreMVC/Views/Series/Edit.cshtml
@@ -23,6 +23,11 @@
 
 }
 
+
+<script src="~/js/editgame.js" asp-append-version="true"></script>
+
+
+@*
 <environment include="Development">
     <script src="~/js/editgame.js" asp-append-version="true"></script>
 </environment>
@@ -30,3 +35,4 @@
 <environment exclude="Development">
     <script src="~/js/editgame.min.js" asp-append-version="true"></script>
 </environment>
+*@
