--- a/BowlingCoreMVC/Views/Game/Edit.cshtml
+++ b/BowlingCoreMVC/Views/Game/Edit.cshtml
@@ -11,6 +11,10 @@
 
 @await Component.InvokeAsync("EditGame", new { GameID = Model.ID })
 
+
+<script src="~/js/editgame.js" asp-append-version="true"></script>
+
+@*
 <environment include="Development">
     <script src="~/js/editgame.js" asp-append-version="true"></script>
 </environment>
@@ -18,3 +22,4 @@
 <environment exclude="Development">
     <script src="~/js/editgame.min.js" asp-append-version="true"></script>
 </environment>
+*@
