--- a/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
+++ b/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
@@ -39,6 +39,32 @@
         </div>
         @*</a>*@
         <div id="scoreboard" class="panel-body">
+            @*<div class="d-flex flex-row bd-highlight">
+                <div class="p-2 flex-column">
+                    <div class="d-flex flex-row bd-highlight">
+                        <div class="p-2 bd-highlight flex-fill">1</div>
+                    </div>
+                    <div class="d-flex flex-row bd-highlight">
+                        <div class="p-2 bd-highlight">X</div>
+                        <div class="p-2 bd-highlight">X</div>
+                    </div>
+                    <div class="d-flex flex-row bd-highlight">
+                        <div class="p-2 bd-highlight flex-fill">XXX</div>
+                    </div>
+
+                </div>
+                <div class="p-2 bd-highlight">Flex item 1</div>
+                <div class="p-2 bd-highlight">Flex item 2</div>
+                <div class="p-2 bd-highlight">Flex item 3</div>
+                <div class="p-2 bd-highlight">Flex item 4</div>
+                <div class="p-2 bd-highlight">Flex item 5</div>
+                <div class="p-2 bd-highlight">Flex item 6</div>
+                <div class="p-2 bd-highlight">Flex item 7</div>
+                <div class="p-2 bd-highlight">Flex item 8</div>
+                <div class="p-2 bd-highlight">Flex item 9</div>
+                <div class="p-2 bd-highlight">Flex item 10</div>
+            </div>*@
+            
             <table class="table table-bordered table-condensed GameTable">
                 <thead>
                     <tr>
@@ -82,7 +108,7 @@
             </table>
 
         </div>
-        <div id="@CollapseGameID" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="GameHeading">
+        <div id="@CollapseGameID" class="" role="tabpanel" aria-labelledby="GameHeading">
             <div class="panel-body">
                 <div class="row">
                     <div class="col-xs-2">
