--- a/BowlingCoreMVC/Views/Shared/_Layout.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_Layout.cshtml
@@ -41,45 +41,52 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">@ViewData["AppName"]</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    @*<li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>*@
-                    <li><a asp-area="" asp-controller="Stats" asp-action="Index">HiScores</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    @*<li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>*@
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Scores<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a asp-area="" asp-controller="Game" asp-action="Index">My Games</a></li>
-                            <li><a asp-area="" asp-controller="Series" asp-action="Index">My Series</a></li>
-                            <li><a asp-area="" asp-controller="Stats" asp-action="MyStats">My Statistics</a></li>
-                        </ul>
-                    </li>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Leagues<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a asp-area="" asp-controller="Leagues" asp-action="Index">Leagues</a></li>
-                            <li><a asp-area="" asp-controller="Locations" asp-action="Index">Locations</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                @await Html.PartialAsync("_LoginPartial")
-            </div>
+        <div class="navbar-brand">
+            <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">@ViewData["AppName"]</a>
         </div>
+
+        @*<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNavDropdown">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>*@
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                @*<li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>*@
+                <li class="nav-item"><a asp-area="" asp-controller="Stats" asp-action="Index">HiScores</a></li>
+                <li class="nav-item"><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                @*<li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>*@
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Scores<span class="caret"></span></a>
+                    <div class="dropdown-menu">
+                        <a asp-area="" asp-controller="Game" asp-action="Index" class="dropdown-item">My Games</a>
+                        <a asp-area="" asp-controller="Series" asp-action="Index" class="dropdown-item">My Series</a>
+                        <a asp-area="" asp-controller="Stats" asp-action="MyStats" class="dropdown-item">My Statistics</a>
+                    </div>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Leagues<span class="caret"></span></a>
+                    <div class="dropdown-menu">
+                        <a asp-area="" asp-controller="Leagues" asp-action="Index" class="dropdown-item">Leagues</a>
+                        <a asp-area="" asp-controller="Locations" asp-action="Index" class="dropdown-item">Locations</a>
+                    </div>
+                </li>
+            </ul>
+            @await Html.PartialAsync("_LoginPartial")
+        </div>
+
     </nav>
     <div class="container body-content">
+        <br /><br />
         @RenderBody()
         <hr />
         <footer>
