first try at the flexbox that looks decent; fixed navbar some more

--- a/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
+++ b/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
@@ -19,11 +19,11 @@
     Game Saved!
 </div>
 
-<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" style="min-width:480px;">
-    <div class="panel panel-primary">
+<div class="card-group" id="accordion" role="tablist" aria-multiselectable="true" style="min-width:480px;">
+    <div class="card">
         @*<a role="button" data-toggle="collapse" data-parent="#accordion" href="#@CollapseGameID" aria-expanded="true" aria-controls="@CollapseGameID">*@
-        <div class="panel-heading" role="button" id="GameHeading" data-toggle="collapse" data-parent="#accordion" href="#@CollapseGameID" aria-expanded="true" aria-controls="@CollapseGameID">
-            <h4 class="panel-title">
+        <div class="card-heading bg-primary" role="button" id="GameHeading" data-toggle="collapse" data-parent="#accordion" href="#@CollapseGameID" aria-expanded="true" aria-controls="@CollapseGameID">
+            <h4 class="card-title">
                 @{
                     if (Model.SeriesID != 0 && Model.SeriesID != null)
                     {
@@ -34,91 +34,75 @@
                         @Model.UserName
                     }
                 }
-                
+
             </h4>
         </div>
         @*</a>*@
-        <div id="scoreboard" class="panel-body">
+        <div id="scoreboard" class="card-body">
             @*<div class="d-flex flex-row bd-highlight">
-                <div class="p-2 flex-column">
-                    <div class="d-flex flex-row bd-highlight">
-                        <div class="p-2 bd-highlight flex-fill">1</div>
-                    </div>
-                    <div class="d-flex flex-row bd-highlight">
-                        <div class="p-2 bd-highlight">X</div>
-                        <div class="p-2 bd-highlight">X</div>
-                    </div>
-                    <div class="d-flex flex-row bd-highlight">
-                        <div class="p-2 bd-highlight flex-fill">XXX</div>
-                    </div>
+                    <div class="p-1 flex-column">
+                        <div class="d-flex flex-row bd-highlight">
+                            <div class="p-1 bd-highlight flex-fill">1</div>
+                        </div>
+                        <div class="d-flex flex-row bd-highlight">
+                            <div class="p-1 bd-highlight">X</div>
+                            <div class="p-1 bd-highlight">X</div>
+                        </div>
+                        <div class="d-flex flex-row bd-highlight">
+                            <div class="p-1 bd-highlight flex-fill">XXX</div>
+                        </div>
 
-                </div>
-                <div class="p-2 bd-highlight">Flex item 1</div>
-                <div class="p-2 bd-highlight">Flex item 2</div>
-                <div class="p-2 bd-highlight">Flex item 3</div>
-                <div class="p-2 bd-highlight">Flex item 4</div>
-                <div class="p-2 bd-highlight">Flex item 5</div>
-                <div class="p-2 bd-highlight">Flex item 6</div>
-                <div class="p-2 bd-highlight">Flex item 7</div>
-                <div class="p-2 bd-highlight">Flex item 8</div>
-                <div class="p-2 bd-highlight">Flex item 9</div>
-                <div class="p-2 bd-highlight">Flex item 10</div>
-            </div>*@
-            
-            <table class="table table-bordered table-condensed GameTable">
-                <thead>
-                    <tr>
-                        @*OR just 1-10..*@
-                        @foreach (var f in Model.Frames)
-                        {
-                            if (f.FrameNum != 10)
+                    </div>
+                    <div class="p-1 bd-highlight">Flex item 1</div>
+                    <div class="p-1 bd-highlight">Flex item 2</div>
+                    <div class="p-1 bd-highlight">Flex item 3</div>
+                    <div class="p-1 bd-highlight">Flex item 4</div>
+                    <div class="p-1 bd-highlight">Flex item 5</div>
+                    <div class="p-1 bd-highlight">Flex item 6</div>
+                    <div class="p-1 bd-highlight">Flex item 7</div>
+                    <div class="p-1 bd-highlight">Flex item 8</div>
+                    <div class="p-1 bd-highlight">Flex item 9</div>
+                    <div class="p-1 bd-highlight">Flex item 10</div>
+                </div>*@
+
+            <div class="d-flex flex-row">
+                @foreach (var f in Model.Frames)
+                {
+                    <div class="p-1 flex-column bd-highlight">
+                        <div class="d-flex flex-row bd-highlight">
+                            <div class="p-1">@f.FrameNum</div>
+                        </div>
+
+                        <div class="d-flex flex-row bd-highlight">
+                            <div class=""><frame-throw frame="@f" throw-num="1"></frame-throw></div>
+                            <div class=""><frame-throw frame="@f" throw-num="2"></frame-throw></div>
+
+                            @if (f.FrameNum == 10)
                             {
-                                <th colspan="2">@f.FrameNum</th>
+                                <frame-throw frame="@f" throw-num="3"></frame-throw>
                             }
-                            else
-                            {
-                                <th colspan="3">@f.FrameNum</th>
-                            }
+                        </div>
 
+                        <div class="d-flex flex-row bd-highlight">
+                            <div class="p-1 flex-fill"><frame-score frame="@f"></frame-score></div>
+                        </div>
+                    </div>
 
-                        }
-                    </tr>
-                </thead>
-                <tr>
-                    @foreach (var f in Model.Frames)
-                    {
-
-                        <frame-throw frame="@f" throw-num="1"></frame-throw>
-                        <frame-throw frame="@f" throw-num="2"></frame-throw>
-
-                        if (f.FrameNum == 10)
-                        {
-                            <frame-throw frame="@f" throw-num="3"></frame-throw>
-                        }
-
-                    }
-                </tr>
-                <tr>
-                    @foreach (var f in Model.Frames)
-                    {
-                        <frame-score frame="@f"></frame-score>
-
-                    }
-                </tr>
-            </table>
+                }
+            </div>
 
         </div>
-        <div id="@CollapseGameID" class="" role="tabpanel" aria-labelledby="GameHeading">
-            <div class="panel-body">
+        <div id="@CollapseGameID" class="card" aria-labelledby="GameHeading">
+            <div class="card-body">
                 <div class="row">
                     <div class="col-xs-2">
-                        <button class="btn btn-default btn-lg" onclick="PreviousClickSendGame(@Model.ID)"><span class="glyphicon glyphicon-arrow-left" /></button>
+                        <button class="btn btn-default btn-lg" onclick="PreviousClickSendGame(@Model.ID)">@*<span class="glyphicon glyphicon-arrow-left" />*@&lt;--</button>
                     </div>
                     <div class="col-xs-2">
-                        <button class="btn btn-default btn-lg" onclick="MissedAllClick(@Model.ID)" id="@Model.ID-btnMissedAll" value="false"><span class="glyphicon glyphicon-adjust" /></button>
+                        <button class="btn btn-default btn-lg" onclick="MissedAllClick(@Model.ID)" id="@Model.ID-btnMissedAll" value="false">@*<span class="glyphicon glyphicon-adjust" />*@O</button>
                     </div>
                     <div class="col-xs-2">
-                        <button class="btn btn-default btn-lg" onclick="NextClickSendGame(@Model.ID)"><span class="glyphicon glyphicon-arrow-right" /></button>
+                        <button class="btn btn-default btn-lg" onclick="NextClickSendGame(@Model.ID)">@*<span class="glyphicon glyphicon-arrow-right" />*@--&gt;</button>
                     </div>
                     <div class="col-xs-2"></div>
                     <div class="col-xs-2">
@@ -177,7 +161,7 @@
                 </div>
             </div>
         </div>
-        <div class="panel-footer">
+        <div class="card-footer">
             <input type="button" class="btn btn-success btn-block" value="Save" onclick="SaveGameClick(@Model.ID)" />
         </div>
     </div>
